# google_takeout_parser

./: .gitignore  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  run-tests.yaml
google_takeout_parser/: __init__.py  __main__.py  cache.py  common.py  compat.py  http_allowlist.py  log.py  merge.py  models.py  parse_csv.py  parse_json.py  path_dispatch.py  path_handler.py  time_utils.py
google_takeout_parser/locales/: all.py  common.py  de.py  en.py  main.py
google_takeout_parser/parse_html/: activity.py  comment.py  html_time_utils.py  test_html_parsing.py
scripts/: pre-commit
split_html/: .gitignore  README.md  go.mod  split_html_activity.go
tests/: common.py  test_csv.py  test_google_takeout.py  test_json.py  test_locale_paths.py  test_split_html.py  test_types.py  test_urls.py
