[metadata]
name = google_takeout_parser
version = 0.1.11
description = Parses data out of your Google Takeout (History, Activity, Youtube, Locations, etc...)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/google_takeout_parser
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = google data parsing

[options]
packages = find:
install_requires =
    IPython
    beautifulsoup4>=4.9.0
    cachew>=0.16.20240129
    click>=8.1
    logzero>=1.7.0
    lxml>=4.6.0
    platformdirs>=2.3.0
    pytz>=2021.3
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests
    split_html
include =
    google_takeout_parser
    google_takeout_parser.parse_html
    google_takeout_parser.locales

[options.entry_points]
console_scripts =
    google_takeout_parser = google_takeout_parser.__main__:main

[options.extras_require]
optional =
    orjson
testing =
    flake8
    mypy
    pytest

[options.package_data]
google_takeout_parser = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[tool:pytest]
addopts =
    --doctest-modules google_takeout_parser
    -vv
    ./tests/
